[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/art/tileset/cave_breaker.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/breaker_cave.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 0, 0, 16, 16 ), Rect2( 16, 0, 16, 16 ), Rect2( 32, 0, 16, 16 ), Rect2( 48, 0, 16, 16 ), Rect2( 64, 0, 16, 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 4 )

[node name="breaker" type="KinematicBody2D" groups=[
"breaker",
"lvl",
]]
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 32, 0, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/break = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="TopDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopDetector"]
position = Vector2( 8, 2 )
shape = SubResource( 3 )

[node name="BlockRespawn" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="TopDetector" to="." method="_on_TopDetector_body_entered"]
[connection signal="timeout" from="BlockRespawn" to="." method="_on_BlockRespawn_timeout"]
